fixed alignment

--- a/BookVault.Frontend/src/components/book-wrapper-side-panels/bookmark-panel/bookmarks.module.css
+++ b/BookVault.Frontend/src/components/book-wrapper-side-panels/bookmark-panel/bookmarks.module.css
@@ -123,6 +123,7 @@
     display: flex;
     flex-direction: row;
     gap: 6px;
+    transform: translateY(3px);
 }
 
 .bookmarkListActionButton{
